fix the bug that cluster tool page has a horizontal scrolling bar

--- a/src/style.css
+++ b/src/style.css
@@ -253,6 +253,7 @@ input[type=radio].scaleSelection {
     cursor: pointer;
     position: absolute;
     opacity: 0;
+    width: 0;
 }
 
 label.scaleSelection{
